feat: add Maven & Build Tools (Java) 1066-1075 -- batch 1